@@ -20,7 +20,8 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.12.0
 --------------
 * Add support for Die objects and Module groups on Windows.
-
+* Only filter-out Dies that are identical to their Packages
+  when it applies to all Dies.
 
 Version 2.11.1
 --------------
